updated security config